readme, express links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hot &amp; Cold Game</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="container"></div>
